<resources>
    <string name="app_name">StazGrady_COMP304SEC002_Lab5_Group7</string>
    <string name="patient_name">Patient Name:</string>
    <string name="patient_age">Patient Age:</string>
    <string name="patient_disease">Patient Disease:</string>
    <string name="patient_bill">Patient Bill:</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="read">Read</string>
    <string name="info">View All Patients</string>
    <string name="login">Login</string>
    <string name="successAdd">Record Successfully Added!</string>
    <string name="successDelete">Record Successfully Deleted!</string>
    <string name="successUpdate">Record Successfully Updated!</string>
    <string name="none">There Is No Record With That Name!</string>
    <string name="failure">Record Could Not Be Added or Updated!</string>
    <string name="emptyFields">Please Fill All The Fields!</string>
    <string name="instructions">All Operations Are Performed Using The Patient Name.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="mainPage">Return to Main Page</string>
    <string name="logout">Logout</string>
</resources>