<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="141dp"
        tools:layout_editor_absoluteY="72dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/emailLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/imageLogo"
        android:layout_marginTop="50dp"
        android:layout_alignStart="@id/regEmailTxt"
        android:text="@string/email" />

    <EditText
        android:id="@+id/regEmailTxt"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/emailLbl"/>

    <TextView
        android:id="@+id/passwordLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/regEmailTxt"
        android:layout_alignStart="@id/regPasswordTxt"
        android:layout_marginTop="25dp"
        android:text="@string/password" />

    <EditText
        android:id="@+id/regPasswordTxt"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/passwordLbl"/>

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/regPasswordTxt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/register" />

    <TextView
        android:id="@+id/returnTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/registerBtn"
        android:clickable="true"
        android:text="@string/mainPage" />

</RelativeLayout>